# cohobj

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
cohobj/: object_tools.py
docs/: .buildinfo  cohobj.html  intro.html  object_tools.html  objects.inv
docs/_sources/: cohobj.rst.txt  index.rst.txt  object_tools.rst.txt
docsrc/: Makefile  conf.py  make.bat
docsrc/_build/doctrees/: environment.pickle  index.doctree  intro.doctree  object_tools.doctree
docsrc/_build/html/: genindex.html  index.html  py-modindex.html  search.html  searchindex.js
docsrc/_build/html/_sources/: intro.rst.txt
src/cohobj/: __init__.py  object_tools.py
